2015-04-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* hashcash.el (hashcash-insert-payment-async-2): Save the mark when
	altering the buffer.

2015-04-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-uu.el (gnus-uu-save-article):
	Make the save-restriction/widen calls make more sense.

2015-04-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-use-idna):
	* gnus-sum.el (gnus-summary-idna-message):
	* message.el (message-use-idna):
	Catch the invalid-operation error that idna.el will issue.

2015-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-group.el (gnus-group--setup-tool-bar-update):
	cursor-sensor-functions should be a list of functions.

2015-04-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-group.el (gnus-tmp-*): Declare.
	(gnus-update-group-mark-positions): Remove unused `topic' var.
	(gnus-group-insert-group-line): Remove unused var `header'.
	(gnus-group--setup-tool-bar-update): New function.
	(gnus-group-insert-group-line): Use it.
	(gnus-group-update-eval-form): Declare local
	dynamically-bound variables.
	(gnus-group-unsubscribe-group): Use \` and \' to match string bounds.

	* gnus-topic.el (gnus-topic-jump-to-topic)
	(gnus-group-prepare-topics, gnus-topic-update-topic)
	(gnus-topic-change-level, gnus-topic-catchup-articles)
	(gnus-topic-remove-group, gnus-topic-delete, gnus-topic-indent):
	Use inhibit-read-only.
	(gnus-topic-prepare-topic): Use gnus-group--setup-tool-bar-update.
	(gnus-topic-mode): Use define-minor-mode and derived-mode-p.

2015-04-12  João Távora  <joaotavora@gmail.com>

	* message.el (message-mode):
	Use `set' and `make-local-variable' instead of `setq-local'.

2015-04-12  Johan Bockgård  <bojohan@gnu.org>

	* gnus-sum.el (gnus-summary-refer-thread):
	Make sure gnus-newsgroup-unreads remains sorted.

2015-04-12  João Távora  <joaotavora@gmail.com>

	Improve sexp-based movement in message-mode
	* message.el (message--syntax-propertize): New function.
	(message-mode): Set syntax-related vars.d